Fix overflow height in example page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,7 +24,6 @@
     .container {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
 
         .options {
             width: unset;
